--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 /app/tmp/*
 /portal/tmp/*
 /frond/tmp/*
+/portal/webroot/files/*
+/frond/webroot/files/*
 /backend/tmp/*
 /app/Config/core.php
 /app/Config/database.php
