--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,8 @@
 /portal/tmp/*
 /frond/tmp/*
 /portal/webroot/files/*
-/frond/webroot/files/*
+/frond/webroot/files/inform*
+/frond/webroot/files/merchant*
 /backend/tmp/*
 /app/Config/core.php
 /app/Config/database.php
